# convexhull

./: CMakeLists.txt  README.md
include/: draw.h  draw3d.h  graham_hull.h  point.h  quick_hull.h  quick_hull_3d.h
src/: draw.cpp  draw3d.cpp  glad.c  graham_hull.cpp  main.cpp  quick_hull.cpp  quick_hull_3d.cpp
tests/: test_q_hull_3d.cpp  test_quick_hull.cpp
